1. Connect to Firebase
